--- a/src/app.scss
+++ b/src/app.scss
@@ -3,9 +3,11 @@
 
   .sections {
     width: 100%;
-    height: calc(100vh - 70px);
+    height: calc(100vh - 210px);
     position: relative;
     top: 70px;
+
+    scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
     scrollbar-width: none; //for firefox
     &::-webkit-scrollbar {
@@ -14,7 +16,7 @@
 
     > * {
       width: 100vw;
-      height: calc(100vh - 70px);
+      height: calc(100vh - 210px);
       scroll-snap-align: start;
     }
   }
