--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,3 +1,38 @@
 .footer {
-  background-color: #fff;
+  background-color: white;
+  height: 140px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 0.5px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0) 5%,
+    black 25% 75%,
+    rgba(0, 0, 0, 0) 95%
+  );
+
+  .container {
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .itemContainer {
+      display: flex;
+      align-items: center;
+
+      .icon {
+        width: 64px;
+        height: 64px;
+        margin: 0 20px;
+        color: rgba(195, 195, 195, 0.7);
+        cursor: pointer;
+      }
+    }
+  }
 }
