--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,7 +1,9 @@
+@import "../../global.scss";
+
 .menu {
   width: 300px;
   height: 100vh;
-  background-color: cadetblue;
+  background-color: $mainColor;
   position: fixed;
   top: 0;
   right: -300px;
@@ -20,8 +22,8 @@
     padding: 0;
     list-style: none;
     font-size: 40px;
-    font-weight: 300;
-    color: fff;
+    font-weight: 100;
+    color: #fff;
     width: 60%;
 
     li {
