--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .navbar {
   width: 100%;
   height: 70px;
@@ -19,9 +21,11 @@
 
       .logo {
         font-size: 40px;
-        font-weight: 700;
+        font-weight: 900;
         text-decoration: none;
         margin-right: 40px;
+        letter-spacing: -0.03em;
+        color: inherit;
       }
 
       .itemContainer {
@@ -60,7 +64,7 @@
   }
 
   &.active {
-    background-color: blue;
+    background-color: $mainColor;
     color: #fff;
 
     .hamburger {
