--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -1,20 +1,22 @@
 .contact {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: column;
+
   form {
     width: 70%;
     height: 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
 
     input {
       width: 300px;
       height: 30px;
       font-size: 14px;
+      margin: 10px 0;
+      font-weight: 300;
     }
     textarea {
       width: 300px;
