--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,13 +1,28 @@
 .about {
-  width: 80%;
+  width: 75%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 
   p {
-    width: 75%;
+    width: 65%;
     margin: 10px;
     font-weight: 300;
+  }
+
+  .skills {
+    margin: 50px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    ul {
+      margin: 10px;
+      padding: 5px;
+      font-weight: 300;
+      li {
+        margin-top: 5px;
+      }
+    }
   }
 }
