--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -24,5 +24,10 @@
       font-size: 14px;
       font-weight: 300;
     }
+    .error {
+      color: red;
+      font-weight: 300;
+      padding: 10px;
+    }
   }
 }
