--- a/src/components/PageTitle/pageTitle.scss
+++ b/src/components/PageTitle/pageTitle.scss
@@ -2,8 +2,9 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin: 25px;
+  padding: 25px;
   h1 {
+    height: 40px;
     border-bottom: 0.5px solid;
     border-image-slice: 1;
     border-image-source: linear-gradient(
