--- a/src/global.scss
+++ b/src/global.scss
@@ -23,7 +23,30 @@ body {
   line-height: 1.6;
 }
 
+.btn {
+  // background-color: $color-primary;
+  color: #fff;
+  bottom: none;
+  border-radius: 0;
+  font-family: $font-primary;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  padding: 1em 3rem;
+  cursor: pointer;
+  transition: all 0.2s;
+
+  &:hover {
+    // background-color: $color-primary-dark;
+  }
+}
+
 .container {
   display: grid;
-  grid-template-rows: 70px 40vw repeat(4, min-content);
+  grid-template-rows: 7rem 40vw repeat(4, min-content);
+  grid-template-columns:
+    [full-start]minmax(6rem, 1fr) [center-start] repeat(
+      8,
+      [col-start] minmax(min-content, 14rem) [col-end]
+    )
+    [center-end]minmax(6rem, 1fr) [full-end];
 }
