--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -1,9 +1,14 @@
 .contact {
   background-color: lightseagreen;
   grid-column: center-start/center-end;
+
+  display: grid;
+  grid-template-columns: auto-fit min-content repeat(2, 1fr) auto-fit;
+  grid-gap: 2rem;
 }
 
 .form {
   display: grid;
-  grid-template-columns: 1fr repeat(2, 1fr) 1fr;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: max-content;
 }
