--- a/src/global.scss
+++ b/src/global.scss
@@ -1,29 +1,2 @@
-// COLOR VARIABLES
-
-// FONT VARIABLES
-$font-primary: "Montserrat", sans-serif;
-$font-bold: "Roboto", sans-serif;
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-html {
-  box-sizing: border-box;
-  font-size: 62.5%; //10px/16px = 62.5% -> 1rem = 10px
-}
-
-body {
-  font-family: $font-primary;
-  font-weight: 100;
-  line-height: 1.6;
-}
-
-.container {
-  display: grid;
-  grid-template-rows: 70px 40vw repeat(4, min-content);
-}
+$mainColor: #96365c;
+$hoverColor: #96365c;
