--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -1,9 +1,33 @@
 .contact {
-  background-color: lightseagreen;
-  grid-column: center-start/center-end;
-}
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
 
-.form {
-  display: grid;
-  grid-template-columns: 1fr repeat(2, 1fr) 1fr;
+  form {
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    input {
+      width: 300px;
+      height: 30px;
+      font-size: 14px;
+      margin: 10px 0;
+      font-weight: 300;
+    }
+    textarea {
+      width: 300px;
+      height: 200px;
+      font-size: 14px;
+      font-weight: 300;
+    }
+    .error {
+      color: red;
+      font-weight: 300;
+      padding: 10px;
+    }
+  }
 }
