--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -3,40 +3,34 @@
 .footer {
   background-color: darkslategray;
   grid-column: full-start/full-end;
-  padding: 8rem;
+  padding-top: 4rem;
 
-  .fnav {
-    list-style: none;
+  display: grid;
+  grid-template-columns: auto-fit minmax(10rem, 1fr) auto-fit;
 
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-    grid-gap: 2rem;
-    align-items: center;
+  &__scroll {
+    margin: 0 auto;
+  }
+  &__socials {
+    margin: 0 auto;
 
-    &__link:link,
-    &__link:visited {
-      font-size: 1.4rem;
-      font-family: $font-primary;
-      color: #fff;
-      text-decoration: none;
-      text-align: center;
-      transition: all 0.2s;
-    }
-
-    &__link:hover,
-    &__link:active {
-      background-color: rgba(#fff, 0.05);
-      transform: translateY(-3px);
+    .icon {
+      width: 3.5rem;
+      height: 3.5rem;
+      margin: 3rem;
     }
   }
-}
+  .copyright {
+    font-size: 2rem;
+    color: #000;
+    margin: 3rem auto;
+    width: 70%;
+    text-align: center;
 
-.copyright {
-  font-size: 1.4rem;
-  color: #000;
-  margin-top: 6rem;
-  margin-right: auto;
-  margin-left: auto;
-  width: 70%;
-  text-align: center;
+    .logo {
+      font-family: $font-bold;
+      font-weight: 900;
+      margin-left: 0.5rem;
+    }
+  }
 }
